/* Copyright 2022 Mithril Security. All rights reserved.
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*   http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License. */

syntax = "proto3";
package securedexchange;

service Exchange {
    rpc SendModel (stream Model) returns (SimpleReply);
    rpc RunModel (stream Data) returns (ModelResult);
}

enum DatumTypeEnum {
    F32 = 0;
    F64 = 1;
    I32 = 2;
    I64 = 3;
    U32 = 4;
    U64 = 5;
};

message Model {
    bytes data = 1;
    uint64 length = 2;
    repeated int32 input_fact = 3;
    DatumTypeEnum datum = 4;
}

message Data {
    bytes input = 1;
}

message ModelResult {
    repeated float output = 1;
    bool ok = 2;
    string msg = 3;
}

message SimpleReply {
    bool ok = 1;
    string msg = 2;
}